feat (css): add base styles to styles.css sheet

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Frontend Mentor | Social links profile</title>
   </head>
+ <style>
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+</style>
   <body>
-    <main>
+    <main class="profile-card">
       <section class="bio">
         <h1>Jessica Randall</h1>
         <h2>London, United Kingdom</h2>
