--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
   <body>
     <main class="profile-card">
       <section class="bio">
-        <h1>Jessica Randall</h1>
-        <h2>London, United Kingdom</h2>
-        <p>"Front-end developer and avid reader."</p>
-      </section>
-      <section class="social-links">
         <div class="profile-pic">
           <img
           src="assets/images/avatar-jessica.jpeg"
           alt="Jessica headshot" >
         </div>
+        <h1>Jessica Randall</h1>
+        <h2>London, United Kingdom</h2>
+        <p>"Front-end developer and avid reader."</p>
+      </section>
+      <section class="social-links">
         <div class="social">
           <p>GitHub</p>
         </div>
@@ -50,7 +50,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Alex Walker</a>.
       </div>
     </footer>
   </body>
